# claude-code-evaluator

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  BENCHMARK_IMPLEMENTATION_PLAN.md  CLAUDE.md  Dockerfile  EXPERIMENT_IMPLEMENTATION_PLAN.md  LICENSE  README.md  REFACTORING_PLAN.md  experiment.txt  pyproject.toml  requirements-dev.txt  test_developer_qa.py  verification_T001_ClaudeSDKClient.md  verification_T004_interrupt_continue.md
.claude/: settings.json
.claude/plugins/code-quality/: plugin.json
.claude/plugins/code-quality/agents/: docstring-adder.md  import-fixer.md  settings-aligner.md  test-updater.md  type-fixer.md  unused-code-remover.md
.github/workflows/: ci.yml  codex-review.yml
.projspec/memory/: constitution.md
benchmarks/: task-cli.yaml
docs/: ARCHITECTURE.md  CODE_QUALITY_IMPROVEMENTS.md  README.md  architecture.md  benchmarking.md  cli-reference.md  configuration.md  development.md  getting-started.md  python-best-practices-alignment.md  quickstart.md  refactor-plan.md  scoring.md  test.excalidraw  workflows.md
evals/: brownfield-hello-world.yaml  brownfield-spoon-knife.yaml  example-suite.yaml  experiment-bias-test.yaml  experiment-custom-dims.yaml  experiment-hello-world.yaml  experiment-multi-config.yaml  experiment-multi-run.yaml  greenfield-2.yaml  greenfield-3.yaml  greenfield-spectra-agent.yaml  greenfield-spectra-direct.yaml  greenfield-spectra.yaml  greenfield-task-manager-feature-dev-direct.yaml  greenfield-task-manager-feature-dev.yaml  greenfield-task-manager-plan-then-implement.yaml  greenfield-task-manager.yaml  greenfield.yaml
specs/001-claude-code-evaluator-with/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-switch-to-claudesdkclient-for/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-i-want-to-develop/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-i-want-to-support/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-claude-sdk-multi-phase-evaluator/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/claude_evaluator/: __init__.py  cli.py  cli_compat.py  evaluation.py  exceptions.py  logging_config.py
src/claude_evaluator/agents/: __init__.py  developer.py  exceptions.py  worker.py
src/claude_evaluator/agents/developer/: __init__.py  (+3 more)
src/claude_evaluator/benchmark/: __init__.py  comparison.py  exceptions.py  runner.py  session_storage.py  storage.py  utils.py
src/claude_evaluator/cli/: __init__.py  exceptions.py  formatters.py  main.py  parser.py  validators.py
src/claude_evaluator/config/: __init__.py  defaults.py  exceptions.py  loader.py  models.py  settings.py  validators.py
src/claude_evaluator/core/: __init__.py  evaluation.py  exceptions.py  formatters.py  git_operations.py
src/claude_evaluator/evaluation/: __init__.py  evaluation.py  exceptions.py  executor.py  formatters.py  git_operations.py  state_machine.py
src/claude_evaluator/experiment/: __init__.py  exceptions.py  judge.py  report_generator.py  runner.py  statistics.py
src/claude_evaluator/metrics/: __init__.py  collector.py  exceptions.py
src/claude_evaluator/models/: __init__.py  answer.py  base.py  decision.py  enums.py  exceptions.py  experiment.py  experiment_models.py  metrics.py  progress.py  query_metrics.py  question.py  report.py  reviewer.py  score_report.py  timeline_event.py  tool_invocation.py
src/claude_evaluator/report/: __init__.py  exceptions.py  generator.py  models.py
src/claude_evaluator/sandbox/: __init__.py  base.py  docker_sandbox.py  local.py
src/claude_evaluator/scoring/: __init__.py  agent.py  claude_client.py  prompts.py  score_builder.py  service.py
src/claude_evaluator/utils/: __init__.py
src/claude_evaluator/workflows/: __init__.py  agent_factory.py  base.py  direct.py  exceptions.py  multi_command.py  plan_then_implement.py  question_handler.py
src/task_manager/: __init__.py
test_eval/2026-01-31T01-12-54/: evaluation.json
test_eval_askuser/2026-01-31T01-25-04/: evaluation.json
test_eval_email/2026-01-31T01-16-12/: evaluation.json
tests/: conftest.py
tests/e2e/: conftest.py  test_autonomous_evaluation.py  test_brownfield_evaluation.py  test_direct_workflow.py  test_full_workflow.py  test_metrics_completeness.py  test_multi_command.py  test_plan_workflow.py  test_workflow_coverage.py
tests/fixtures/: __init__.py  sample_evaluation.json  sample_evaluation_failure.json  sample_evaluation_partial.json
tests/integration/: test_acceptance_criteria.py  test_agent_communication.py  test_brownfield_clone.py  test_experiment_runner.py  test_multi_phase_checkpoint.py  test_multi_phase_evaluation.py  test_reviewer_config_checkpoint.py  test_sdk_integration.py
tests/test_task_manager/: __init__.py
tests/unit/: test_change_summary.py  test_cli.py  test_config.py  test_developer_agent.py  test_enums.py  test_evaluation.py  test_formatters.py  test_git_operations.py  test_metrics.py  test_report_generator.py  test_repository_source.py  test_worker_agent.py  test_workflow_question_handling.py  test_workflows.py
tests/unit/agents/: test_developer_answers.py  test_worker_questions.py
tests/unit/benchmark/: test_comparison.py  test_runner.py  test_session_storage.py  test_storage.py
tests/unit/evaluator/: test_claude_client.py
tests/unit/experiment/: test_config_loader.py  test_docker_sandbox.py  test_experiment_command.py  test_judge.py  test_models.py  test_report_generator.py  test_statistics.py
tests/unit/models/: test_answer.py  test_question.py
tests/unit/scoring/: test_score_builder.py
tests/validation/: __init__.py  test_success_criteria.py
(+128 files in other folders)
